2006-02-07  Sven Panne  <sven.panne@aedion.de>

	* NEWS: Prepared for 1.0.1 release, probably more to come.

	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
	by hand. Added a tiny comment.

2005-02-06  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Use modules written for OpenAL. Bumped version.
	
	* configure.ac: Added symbol visibility support.

2006-02-06  Sven Panne  <sven.panne@aedion.de>

	* admin/pkgconfig/Makefile.am: Use a more portable way of defining
	pkgconfdir (by Andreas Bierfert).

2006-02-04  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alut.h: Use visibility attribute only when building ALUT
	library.

	* configure.ac: Fixed CR/LF vs. LF issue in configure on Windows. Bumped
	version to 1.0.1.

2005-12-17  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt, include/AL/alut.h: GCC visibility support.

2005-12-16  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.0.0, CVS tag is "freealut_1_0_0".

	* admin/pkgconfig/freealut-config.in, admin/pkgconfig/freealut.pc.in:
	Fixed copy-n-paste typo. Somehow this fix didn't make into RC2...

2005-12-15  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, admin/RPM/freealut.spec, configure.ac: Build and install
	freealut-config and a pkg-config description.

	* admin/.cvsignore, admin/Makefile.am, admin/pkgconfig/.cvsignore,
	admin/pkgconfig/Makefile.am, admin/pkgconfig/freealut-config.in,
	admin/pkgconfig/freealut.pc.in: Added.

2005-12-15  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing typos
	
	* CMakeLists.txt: also make freealut-config and freealut.pc; sync
	VERSION to configure.ac

2005-12-12  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing

2005-12-10  Sven Panne  <sven.panne@aedion.de>

	* src/alutInit.c (alutExit): Do a full sanity check only when ALUT
	itself owns the context, an external context might have been destroyed
	before alutExit is called.

2005-12-05  Prakash Punnoor <prakash@punnoor.de>
