@@ -9,6 +9,8 @@ Bugfix release only, no change in functionality.
 
    * Added symbol visibility support when using GCC 4.x.
 
+   * When nanosleep returns early due to a signal, continue sleeping, otherwise
+     return AL_FALSE from alutSleep.
 
 Release 1.0.0 (2005-12-16, CVS tag "freealut_1_0_0")
 ----------------------------------------------------
